# bluetooth-sil-bluez5

./: CMakeLists.txt  LICENSE  README.md  oss-pkg-info.yaml
files/xml/: bluez5.xml  freedesktop.xml  ofono.xml
src/: asyncutils.cpp  asyncutils.h  bluez5adapter.cpp  bluez5adapter.h  bluez5advertise.cpp  bluez5advertise.h  bluez5agent.cpp  bluez5agent.h  bluez5busconfig.h  bluez5device.cpp  bluez5device.h  bluez5gattremoteattribute.cpp  bluez5gattremoteattribute.h  bluez5mediacontrol.cpp  bluez5mediacontrol.h  bluez5mediafolder.cpp  bluez5mediafolder.h  bluez5mediaplayer.cpp  bluez5mediaplayer.h  bluez5meshadv.cpp  bluez5meshadv.h  bluez5meshadvprovagent.cpp  bluez5meshadvprovagent.h  bluez5meshadvprovisioner.cpp  bluez5meshadvprovisioner.h  bluez5meshapplication.cpp  bluez5meshapplication.h  bluez5meshelement.cpp  bluez5meshelement.h  bluez5meshmodel.h  bluez5meshmodelconfigclient.cpp  bluez5meshmodelconfigclient.h  bluez5meshmodelonoffclient.cpp  bluez5meshmodelonoffclient.h  bluez5mprisplayer.cpp  bluez5mprisplayer.h  bluez5obexagent.cpp  bluez5obexagent.h  bluez5obexclient.cpp  bluez5obexclient.h  (+36 more)
